gen/io/inceptor/drl/parser/DrlParser.java
// Generated from /home/transwarp/gitlab/inceptor-drools/src/main/java/io/inceptor/drl/parser/DrlParser.g4 by ANTLR 4.9.1
package io.inceptor.drl.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DrlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NULL=1, TRUE=2, FALSE=3, RULE=4, DECLARE=5, DATASOURCE=6, END=7, WHEN=8, 
		THEN=9, GLOBAL=10, PACKAGE=11, IMPORT=12, EXISTS=13, AndAnd=14, OrOr=15, 
		DRL=16, DOTDRL=17, FROM=18, LIMIT=19, SEP=20, DOT=21, STAR=22, AT=23, 
		LeftParen=24, RightParen=25, LeftBracket=26, RightBracket=27, Colon=28, 
		Comma=29, Equal=30, COMPARE=31, CONTAIN=32, Identifier=33, STRING=34, 
		NUMBER=35, WS=36, BlockComment=37, LineComment=38, FloatingPointLiteral=39, 
		ENDMVEL=40, LINE=41, WS2=42;
	public static final int
		RULE_file = 0, RULE_pack = 1, RULE_importDecls = 2, RULE_declares = 3, 
		RULE_global = 4, RULE_glbcodelines = 5, RULE_rules = 6, RULE_importDecl = 7, 
		RULE_importDrl = 8, RULE_importDatasource = 9, RULE_importNormal = 10, 
		RULE_declare = 11, RULE_fields = 12, RULE_field = 13, RULE_annotation = 14, 
		RULE_elementValuePairs = 15, RULE_elementValuePair = 16, RULE_elementValue = 17, 
		RULE_onerule = 18, RULE_whenClauses = 19, RULE_whenClause = 20, RULE_conditions = 21, 
		RULE_condition = 22, RULE_compareClause = 23, RULE_containClause = 24, 
		RULE_existsClause = 25, RULE_literal = 26, RULE_methodCall = 27, RULE_jsonPath = 28, 
		RULE_booleanLiteral = 29, RULE_codelines = 30, RULE_codeline = 31, RULE_qualifiedName = 32;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "pack", "importDecls", "declares", "global", "glbcodelines", 
			"rules", "importDecl", "importDrl", "importDatasource", "importNormal", 
			"declare", "fields", "field", "annotation", "elementValuePairs", "elementValuePair", 
			"elementValue", "onerule", "whenClauses", "whenClause", "conditions", 
			"condition", "compareClause", "containClause", "existsClause", "literal", 
			"methodCall", "jsonPath", "booleanLiteral", "codelines", "codeline", 
			"qualifiedName"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'null'", "'true'", "'false'", "'rule'", "'declare'", "'datasource'", 
			"'end'", "'when'", "'then'", "'global'", "'package'", "'import'", "'exists'", 
			null, null, "'drl'", "'.drl'", "'from'", "'limit'", "';'", "'.'", "'*'", 
			"'@'", "'('", "')'", "'['", "']'", "':'", "','", "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "NULL", "TRUE", "FALSE", "RULE", "DECLARE", "DATASOURCE", "END", 
			"WHEN", "THEN", "GLOBAL", "PACKAGE", "IMPORT", "EXISTS", "AndAnd", "OrOr", 
			"DRL", "DOTDRL", "FROM", "LIMIT", "SEP", "DOT", "STAR", "AT", "LeftParen", 
			"RightParen", "LeftBracket", "RightBracket", "Colon", "Comma", "Equal", 
			"COMPARE", "CONTAIN", "Identifier", "STRING", "NUMBER", "WS", "BlockComment", 
			"LineComment", "FloatingPointLiteral", "ENDMVEL", "LINE", "WS2"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DrlParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DrlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class FileContext extends ParserRuleContext {
		public PackContext pack() {
			return getRuleContext(PackContext.class,0);
		}
		public ImportDeclsContext importDecls() {
			return getRuleContext(ImportDeclsContext.class,0);
		}
		public DeclaresContext declares() {
			return getRuleContext(DeclaresContext.class,0);
		}
		public RulesContext rules() {
			return getRuleContext(RulesContext.class,0);
		}
		public GlobalContext global() {
			return getRuleContext(GlobalContext.class,0);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DrlParserListener ) ((DrlParserListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DrlParserListener ) ((DrlParserListener)listener).exitFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrlParserVisitor ) return ((DrlParserVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			pack();
			setState(67);
			importDecls();
			setState(68);
			declares();
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==GLOBAL) {
				{
				setState(69);
				global();
				}
			}

			setState(72);
			rules();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PackContext extends ParserRuleContext {
		public TerminalNode PACKAGE() { return getToken(DrlParser.PACKAGE, 0); }
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TerminalNode SEP() { return getToken(DrlParser.SEP, 0); }
		public PackContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pack; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DrlParserListener ) ((DrlParserListener)listener).enterPack(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DrlParserListener ) ((DrlParserListener)listener).exitPack(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrlParserVisitor ) return ((DrlParserVisitor<? extends T>)visitor).visitPack(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PackContext pack() throws RecognitionException {
		PackContext _localctx = new PackContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_pack);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(PACKAGE);
			setState(75);
			qualifiedName();
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEP) {
				{
				setState(76);
				match(SEP);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportDeclsContext extends ParserRuleContext {
		public List<ImportDeclContext> importDecl() {
			return getRuleContexts(ImportDeclContext.class);
		}
		public ImportDeclContext importDecl(int i) {
			return getRuleContext(ImportDeclContext.class,i);
		}
		public ImportDeclsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDecls; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DrlParserListener ) ((DrlParserListener)listener).enterImportDecls(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DrlParserListener ) ((DrlParserListener)listener).exitImportDecls(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrlParserVisitor ) return ((DrlParserVisitor<? extends T>)visitor).visitImportDecls(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportDeclsContext importDecls() throws RecognitionException {
		ImportDeclsContext _localctx = new ImportDeclsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importDecls);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(79);
				importDecl();
				}
				}
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaresContext extends ParserRuleContext {
		public List<DeclareContext> declare() {
			return getRuleContexts(DeclareContext.class);
		}
		public DeclareContext declare(int i) {
			return getRuleContext(DeclareContext.class,i);
		}
		public DeclaresContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declares; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DrlParserListener ) ((DrlParserListener)listener).enterDeclares(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DrlParserListener ) ((DrlParserListener)listener).exitDeclares(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrlParserVisitor ) return ((DrlParserVisitor<? extends T>)visitor).visitDeclares(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaresContext declares() throws RecognitionException {
		DeclaresContext _localctx = new DeclaresContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declares);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DECLARE || _la==AT) {
				{
				{
				setState(85);
				declare();
				}
				}
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GlobalContext extends ParserRuleContext {
		public TerminalNode GLOBAL() { return getToken(DrlParser.GLOBAL, 0); }
		public GlbcodelinesContext glbcodelines() {
			return getRuleContext(GlbcodelinesContext.class,0);
		}
		public TerminalNode ENDMVEL() { return getToken(DrlParser.ENDMVEL, 0); }
		public GlobalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_global; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DrlParserListener ) ((DrlParserListener)listener).enterGlobal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DrlParserListener ) ((DrlParserListener)listener).exitGlobal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrlParserVisitor ) return ((DrlParserVisitor<? extends T>)visitor).visitGlobal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GlobalContext global() throws RecognitionException {
		GlobalContext _localctx = new GlobalContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_global);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(GLOBAL);
			setState(92);
			glbcodelines();
			setState(93);
			match(ENDMVEL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GlbcodelinesContext extends ParserRuleContext {
		public List<CodelineContext> codeline() {
			return getRuleContexts(CodelineContext.class);
		}
		public CodelineContext codeline(int i) {
			return getRuleContext(CodelineContext.class,i);
		}
		public GlbcodelinesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_glbcodelines; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DrlParserListener ) ((DrlParserListener)listener).enterGlbcodelines(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DrlParserListener ) ((DrlParserListener)listener).exitGlbcodelines(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrlParserVisitor ) return ((DrlParserVisitor<? extends T>)visitor).visitGlbcodelines(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GlbcodelinesContext glbcodelines() throws RecognitionException {
		GlbcodelinesContext _localctx = new GlbcodelinesContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_glbcodelines);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LINE) {
				{
				{
				setState(95);
				codeline();
				}
				}
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RulesContext extends ParserRuleContext {
		public List<OneruleContext> onerule() {
			return getRuleContexts(OneruleContext.class);
		}
		public OneruleContext onerule(int i) {
			return getRuleContext(OneruleContext.class,i);
		}
		public RulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DrlParserListener ) ((DrlParserListener)listener).enterRules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DrlParserListener ) ((DrlParserListener)listener).exitRules(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrlParserVisitor ) return ((DrlParserVisitor<? extends T>)visitor).visitRules(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RulesContext rules() throws RecognitionException {
		RulesContext _localctx = new RulesContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_rules);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(101);
				onerule();
				}
				}
				setState(104); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==RULE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportDeclContext extends ParserRuleContext {
		public ImportDrlContext importDrl() {
			return getRuleContext(ImportDrlContext.class,0);
		}
		public ImportDatasourceContext importDatasource() {
			return getRuleContext(ImportDatasourceContext.class,0);
		}
		public ImportNormalContext importNormal() {
			return getRuleContext(ImportNormalContext.class,0);
		}
		public ImportDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DrlParserListener ) ((DrlParserListener)listener).enterImportDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DrlParserListener ) ((DrlParserListener)listener).exitImportDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrlParserVisitor ) return ((DrlParserVisitor<? extends T>)visitor).visitImportDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportDeclContext importDecl() throws RecognitionException {
		ImportDeclContext _localctx = new ImportDeclContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_importDecl);
		try {
			setState(109);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				importDrl();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(107);
				importDatasource();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(108);
				importNormal();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportDrlContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(DrlParser.IMPORT, 0); }
		public TerminalNode DRL() { return getToken(DrlParser.DRL, 0); }
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TerminalNode DOTDRL() { return getToken(DrlParser.DOTDRL, 0); }
		public TerminalNode SEP() { return getToken(DrlParser.SEP, 0); }
		public ImportDrlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDrl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DrlParserListener ) ((DrlParserListener)listener).enterImportDrl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DrlParserListener ) ((DrlParserListener)listener).exitImportDrl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrlParserVisitor ) return ((DrlParserVisitor<? extends T>)visitor).visitImportDrl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportDrlContext importDrl() throws RecognitionException {
		ImportDrlContext _localctx = new ImportDrlContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_importDrl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(IMPORT);
			setState(112);
			match(DRL);
			setState(113);
			qualifiedName();
			setState(114);
			match(DOTDRL);
			setState(115);
			match(SEP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportDatasourceContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(DrlParser.IMPORT, 0); }
		public TerminalNode DATASOURCE() { return getToken(DrlParser.DATASOURCE, 0); }
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TerminalNode SEP() { return getToken(DrlParser.SEP, 0); }
		public ImportDatasourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDatasource; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DrlParserListener ) ((DrlParserListener)listener).enterImportDatasource(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DrlParserListener ) ((DrlParserListener)listener).exitImportDatasource(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrlParserVisitor ) return ((DrlParserVisitor<? extends T>)visitor).visitImportDatasource(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportDatasourceContext importDatasource() throws RecognitionException {
		ImportDatasourceContext _localctx = new ImportDatasourceContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_importDatasource);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(IMPORT);
			setState(118);
			match(DATASOURCE);
			setState(119);
			qualifiedName();
			setState(120);
			match(SEP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportNormalContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(DrlParser.IMPORT, 0); }
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TerminalNode SEP() { return getToken(DrlParser.SEP, 0); }
		public ImportNormalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importNormal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DrlParserListener ) ((DrlParserListener)listener).enterImportNormal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DrlParserListener ) ((DrlParserListener)listener).exitImportNormal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrlParserVisitor ) return ((DrlParserVisitor<? extends T>)visitor).visitImportNormal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportNormalContext importNormal() throws RecognitionException {
		ImportNormalContext _localctx = new ImportNormalContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_importNormal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(IMPORT);
			setState(123);
			qualifiedName();
			setState(124);
			match(SEP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclareContext extends ParserRuleContext {
		public TerminalNode DECLARE() { return getToken(DrlParser.DECLARE, 0); }
		public TerminalNode Identifier() { return getToken(DrlParser.Identifier, 0); }
		public FieldsContext fields() {
			return getRuleContext(FieldsContext.class,0);
		}
		public TerminalNode END() { return getToken(DrlParser.END, 0); }
		public List<AnnotationContext> annotation() {
			return getRuleContexts(AnnotationContext.class);
		}
		public AnnotationContext annotation(int i) {
			return getRuleContext(AnnotationContext.class,i);
		}
		public DeclareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declare; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DrlParserListener ) ((DrlParserListener)listener).enterDeclare(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DrlParserListener ) ((DrlParserListener)listener).exitDeclare(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrlParserVisitor ) return ((DrlParserVisitor<? extends T>)visitor).visitDeclare(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclareContext declare() throws RecognitionException {
		DeclareContext _localctx = new DeclareContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_declare);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AT) {
				{
				{
				setState(126);
				annotation();
				}
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(132);
			match(DECLARE);
			setState(133);
			match(Identifier);
			setState(134);
			fields();
			setState(135);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldsContext extends ParserRuleContext {
		public List<FieldContext> field() {
			return getRuleContexts(FieldContext.class);
		}
		public FieldContext field(int i) {
			return getRuleContext(FieldContext.class,i);
		}
		public FieldsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fields; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DrlParserListener ) ((DrlParserListener)listener).enterFields(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DrlParserListener ) ((DrlParserListener)listener).exitFields(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrlParserVisitor ) return ((DrlParserVisitor<? extends T>)visitor).visitFields(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldsContext fields() throws RecognitionException {
		FieldsContext _localctx = new FieldsContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_fields);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(137);
				field();
				}
				}
				setState(140); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==AT || _la==Identifier );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(DrlParser.Identifier, 0); }
		public TerminalNode Colon() { return getToken(DrlParser.Colon, 0); }
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public List<AnnotationContext> annotation() {
			return getRuleContexts(AnnotationContext.class);
		}
		public AnnotationContext annotation(int i) {
			return getRuleContext(AnnotationContext.class,i);
		}
		public FieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_field; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DrlParserListener ) ((DrlParserListener)listener).enterField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DrlParserListener ) ((DrlParserListener)listener).exitField(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrlParserVisitor ) return ((DrlParserVisitor<? extends T>)visitor).visitField(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldContext field() throws RecognitionException {
		FieldContext _localctx = new FieldContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_field);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AT) {
				{
				{
				setState(142);
				annotation();
				}
				}
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(148);
			match(Identifier);
			setState(149);
			match(Colon);
			setState(150);
			qualifiedName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
